--- a/taxi/Etrans.html
+++ b/taxi/Etrans.html
@@ -12,7 +12,7 @@
     <li><img src="etrans.jpg" alt=""></li>
     <li><a href="Driver platform.html">DRIVER PORTAL</a></li>
     <li><a href="Passenger platform.html">PASSENGER PORTAL</a></li>
-    <li><a href="Administrative platform.html">ADMINITRATIVE PORTAL</a></li>
+    <li><a href="administrative portal.html">ADMINITRATIVE PORTAL</a></li>
     <li><a href="">CAR RENTAL SERVICE</a></li>
     <li><a href="">ORDER CAB</a></li>
   </ul>
