--- a/taxi/Passenger platform.html
+++ b/taxi/Passenger platform.html
@@ -5,7 +5,7 @@
 	<title>Passenger Platform</title>
 	<link rel="stylesheet" type="text/css" href="trans.css">
 </head>
-<body background="ETRANS.jpg">
+<body background="etrans.jpg">
 	<header>
 		<h1>ETRANS</h1>
 	</header>
