Update Sign in page.html

--- a/taxi/Sign in page.html
+++ b/taxi/Sign in page.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="trans.css">
 
 	</head>	
-	<body background="ETRANS.jpg">
+	<body background="etrans.jpg">
 		<h1 class="CA"><strong>Create Account</strong></h1>
 		<form action="scatichat.html">
 
