--- a/taxi/administrative portal.html
+++ b/taxi/administrative portal.html
@@ -10,7 +10,7 @@
 		<h1>ETRANS</h1>
 	</header>
 
-	<form action="indeed.html">
+	<form action="http://gps.sztrackpro.com/">
 		<label for="username">Admin ID#</label> 
 		<br/><input type="text" required="1001"> 
 		
